--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "@lambdalisue/async",
+  "name": "@lambdalisue/unreachable",
   "version": "0.0.0",
   "exports": "./mod.ts",
   "tasks": {
